--- a/frontAxios/package.json
+++ b/frontAxios/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.5",
+    "axios": "^1.9.0",
+    "axois": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
